KSQL-14708: Remove SecurityManager and fix deprecated APIs for Java 25 compatibility
- Delete ExtensionSecurityManager and its tests; remove all pushInUdf/popOutUdf
  call sites across PluggableUdf, FunctionLoaderUtils, UdafFactoryInvoker,
  BaseAggregateFunction, UdafAggregateFunction, UdafTableAggregateFunction,
  UdfLoader, and UserFunctionLoader
- Remove KSQL_UDF_SECURITY_MANAGER_ENABLED config from KsqlConfig and all
  test references
- Replace Class.newInstance() (removed in Java 21) with
  getDeclaredConstructor().newInstance() in FunctionLoaderUtils,
  KsqlScalarFunction, and TimestampExtractionPolicyFactory
- Replace AccessibleObject.isAccessible() (deprecated for removal) with
  canAccess(Object) in LimitedProxyBuilder

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>